--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+@font-face {
+    font-family: "mulish";
+    src: url(./Mulish-VariableFont_wght.ttf) format("truetype");
+}
+body{
+    margin: 0;
+    padding: 0;
+    font-family:"mulish" ;
+}
+a{
+    text-decoration: none;
+    color: #000;
+}
 .first{
     display: flex;
     flex-direction: row;
@@ -193,7 +206,7 @@ button{
     color: #1E3240;
 }
 #addtext{
-    width:136px;
+    width:160px;
     height:12px;
     font-weight: 400;
     font-size: 10px;
